--- a/root/galeria.html
+++ b/root/galeria.html
@@ -16,30 +16,34 @@
   <body>
     <!-- inicio header -->
     <header>
-      <img src="../logo_transparent.png" alt="logo" />
-      <ul class="navbar-items">
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="servicios.html">Servicios</a></li>
-        <li><a href="galeria.html">Galeria</a></li>
-        <li><a href="nosotros.html">Nosotros</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-      </ul>
+      <!-- inicio nav -->
+      <nav>
+        <img src="../logo_transparent.png" alt="logo" />
+        <ul class="navbar-items">
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="servicios.html">Servicios</a></li>
+          <li><a href="galeria.html">Galeria</a></li>
+          <li><a href="nosotros.html">Nosotros</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+      </nav>
+      <!-- fin nav -->
     </header>
     <!-- fin header -->
     <!-- inicio titulo -->
     <h1>Trabajos</h1>
     <!-- fin titulo -->
     <!-- inicio galeria container -->
-    <div class="galeria-container">
-      <img src="../Gallery1.JPG" alt="" />
-      <img src="../Gallery2.JPG" alt="" />
-      <img src="../Gallery3.JPG" alt="" />
-      <img src="../Gallery4.JPG" alt="" />
-      <img src="../Gallery5.JPG" alt="" />
-      <img src="../Gallery6.JPG" alt="" />
-      <img src="../Gallery7.JPG" alt="" />
-      <img src="../Gallery8.JPG" alt="" />
-    </div>
+    <section class="galeria-container">
+      <img src="../Gallery1.JPG" alt="imagen 1" />
+      <img src="../Gallery2.JPG" alt="imagen 2" />
+      <img src="../Gallery3.JPG" alt="imagen 3" />
+      <img src="../Gallery4.JPG" alt="imagen 4" />
+      <img src="../Gallery5.JPG" alt="imagen 5" />
+      <img src="../Gallery6.JPG" alt="imagen 6" />
+      <img src="../Gallery7.JPG" alt="imagen 7" />
+      <img src="../Gallery8.JPG" alt="imagen 8" />
+    </section>
     <!-- fin galeria container -->
     <!-- inicio footer -->
     <footer>
