--- a/root/index.html
+++ b/root/index.html
@@ -16,26 +16,30 @@
   <body>
     <!-- inicio header -->
     <header>
-      <img src="../logo_transparent.png" alt="logo" />
-      <ul class="navbar-items">
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="servicios.html">Servicios</a></li>
-        <li><a href="galeria.html">Galeria</a></li>
-        <li><a href="nosotros.html">Nosotros</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-      </ul>
+      <!-- inicio nav -->
+      <nav>
+        <img src="../logo_transparent.png" alt="logo" />
+        <ul class="navbar-items">
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="servicios.html">Servicios</a></li>
+          <li><a href="galeria.html">Galeria</a></li>
+          <li><a href="nosotros.html">Nosotros</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+      </nav>
+      <!-- fin nav -->
     </header>
     <!-- fin header -->
     <!-- inicio sección inicio -->
-    <div class="inicio">
+    <section class="inicio">
       <h1>TeknoSun SpA</h1>
       <h2>PBS. Mantención y Servicios Industriales</h2>
       <!-- <button>Contactanos</button> -->
       <a class="button" href="contacto.html">Contactanos</a>
-    </div>
+    </section>
     <!-- fin sección inicio -->
     <!-- inicio sección nosotros  -->
-    <div class="nosotros">
+    <section class="nosotros">
       <h2>Nuestro Objetivo</h2>
       <p>
         Convertirse en un aliado estratégico alineado con el cliente en la
@@ -46,21 +50,23 @@
         adaptado a sus necesidades y a costos competitivos.
       </p>
       <a class="button" href="nosotros.html">Conocenos mas</a>
-    </div>
+    </section>
     <!-- fin sección nosotros  -->
     <!-- inicio sección servicios -->
-    <div class="servicios">
-      <h2>Principales Servicios</h2>
-      <a href="servicios.html#MantPred"><h3>Mantenimiento predictivo</h3></a>
-      <a href="servicios.html#MantMaq"><h3>Mantención de maquinaria</h3></a>
-      <a href="servicios.html#RepMaqEq">
-        <h3>Reparación de máquinas y equipos</h3>
-      </a>
-      <a class="button" href="servicios.html">Todos los servicios</a>
-    </div>
+    <section class="servicios">
+      <article>
+        <h2>Principales Servicios</h2>
+        <a href="servicios.html#MantPred"><h3>Mantenimiento predictivo</h3></a>
+        <a href="servicios.html#MantMaq"><h3>Mantención de maquinaria</h3></a>
+        <a href="servicios.html#RepMaqEq">
+          <h3>Reparación de máquinas y equipos</h3>
+        </a>
+        <a class="button" href="servicios.html">Todos los servicios</a>
+      </article>
+    </section>
     <!-- fin sección servicios -->
     <!-- inicio sección contacto -->
-    <div class="contacto">
+    <section class="contacto">
       <h2>Comunicate con nosotros</h2>
       <div class="flex-container">
         <form action="">
@@ -72,7 +78,7 @@
           <br />
           <input type="submit" value="Contactanos" />
         </form>
-        <div>
+        <article>
           <h3>Nuestras redes:</h3>
           <p>Siguenos en nuestras redes para ver a detalle nuestro trabajo</p>
           <br />
@@ -85,9 +91,9 @@
           <p>comercial@teknosun.cl</p>
           <p>+56994340066</p>
           <img src="../Map.png" alt="mapa" />
-        </div>
+        </article>
       </div>
-    </div>
+    </section>
     <!-- fin sección contacto -->
     <!-- inicio footer -->
     <footer>
