--- a/root/contacto.html
+++ b/root/contacto.html
@@ -16,21 +16,25 @@
   <body>
     <!-- inicio header -->
     <header>
-      <img src="../logo_transparent.png" alt="logo" />
-      <ul class="navbar-items">
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="servicios.html">Servicios</a></li>
-        <li><a href="galeria.html">Galeria</a></li>
-        <li><a href="nosotros.html">Nosotros</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-      </ul>
+      <!-- inicio nav -->
+      <nav>
+        <img src="../logo_transparent.png" alt="logo" />
+        <ul class="navbar-items">
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="servicios.html">Servicios</a></li>
+          <li><a href="galeria.html">Galeria</a></li>
+          <li><a href="nosotros.html">Nosotros</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+      </nav>
+      <!-- fin nav -->
     </header>
     <!-- fin header -->
     <!-- inicio titulo -->
     <h1>Contactanos</h1>
     <!-- fin titulo -->
     <!-- inicio formulario -->
-    <div class="contacto">
+    <section class="contacto">
       <h2>Comunicate con nosotros</h2>
       <div class="flex-container">
         <form action="">
@@ -42,7 +46,7 @@
           <br />
           <input type="submit" value="Contactanos" />
         </form>
-        <div>
+        <article>
           <h3>Nuestras redes:</h3>
           <p>Siguenos en nuestras redes para ver a detalle nuestro trabajo</p>
           <br />
@@ -55,9 +59,9 @@
           <p>comercial@teknosun.cl</p>
           <p>+56994340066</p>
           <img src="../Map.png" alt="mapa" />
-        </div>
+        </article>
       </div>
-    </div>
+    </section>
       <!-- fin contacto -->
     </div>
     <!-- inicio footer -->
