--- a/root/nosotros.html
+++ b/root/nosotros.html
@@ -16,14 +16,18 @@
   <body>
     <!-- inicio header -->
     <header>
-      <img src="../logo_transparent.png" alt="logo" />
-      <ul class="navbar-items">
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="servicios.html">Servicios</a></li>
-        <li><a href="galeria.html">Galeria</a></li>
-        <li><a href="nosotros.html">Nosotros</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-      </ul>
+      <!-- inicio nav -->
+      <nav>
+        <img src="../logo_transparent.png" alt="logo" />
+        <ul class="navbar-items">
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="servicios.html">Servicios</a></li>
+          <li><a href="galeria.html">Galeria</a></li>
+          <li><a href="nosotros.html">Nosotros</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+      </nav>
+      <!-- fin nav -->
     </header>
     <!-- fin header -->
     <!-- inicio titulo -->
@@ -31,8 +35,8 @@
     <!-- fin titulo -->
     <!-- inicio nosotros items -->
     <!-- inicio nosotros container -->
-    <div class="nosotros-container">
-      <div class="nosotros-item">
+    <section class="nosotros-container">
+      <article class="nosotros-item">
         <h2>Nuestra Filosofía</h2>
         <p>
           El servicio ofrecido se sustenta en el desarrollo de las actividades
@@ -42,8 +46,8 @@
         <p>✓ Cuidado del Medio Ambiente</p>
         <p>✓ Que se realice en forma Segura</p>
         <p>✓ Preocupación por la Salud ocupacional del equipo humano</p>
-      </div>
-      <div class="nosotros-item">
+      </article>
+      <article class="nosotros-item">
         <h2>Nuestra Misión</h2>
         <p>
           Entregar un servicio de excelencia basado en la calidad de sus
@@ -54,8 +58,8 @@
           competitividad en el mercado.
         </p>
         <p>✓ Preocupación por la Salud ocupacional del equipo humano</p>
-      </div>
-      <div class="nosotros-item">
+      </article>
+      <article class="nosotros-item">
         <h2>Nuestro Objetivo</h2>
         <p>
           Convertirse en un aliado estratégico alineado con el cliente en la
@@ -68,9 +72,9 @@
           Proporcionar un servicio integral, de alta calidad adaptado a sus
           necesidades y a costos competitivos.
         </p>
-      </div>
+      </article>
       <!-- fin nosotros items -->
-    </div>
+    </section>
     <!-- fin nosotros container -->
     <!-- inicio footer -->
     <footer>
