--- a/root/servicios.html
+++ b/root/servicios.html
@@ -16,23 +16,27 @@
   <body>
     <!-- inicio header -->
     <header>
-      <img src="../logo_transparent.png" alt="logo" />
-      <ul class="navbar-items">
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="servicios.html">Servicios</a></li>
-        <li><a href="galeria.html">Galeria</a></li>
-        <li><a href="nosotros.html">Nosotros</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-      </ul>
+      <!-- inicio nav -->
+      <nav>
+        <img src="../logo_transparent.png" alt="logo" />
+        <ul class="navbar-items">
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="servicios.html">Servicios</a></li>
+          <li><a href="galeria.html">Galeria</a></li>
+          <li><a href="nosotros.html">Nosotros</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+      </nav>
+      <!-- fin nav -->
     </header>
     <!-- fin header -->
     <!-- inicio titulo -->
     <h1>Servicios</h1>
     <!-- fin titulo -->
     <!-- inicio servicios container -->
-    <div class="servicio-container">
+    <section class="servicio-container">
       <!-- inicio servicios items -->
-      <div class="servicio-item" id="MantMaq">
+      <article class="servicio-item" id="MantMaq">
         <h2>Mantención de maquinarias</h2>
         <p>
           El Lorem Ipsum fue concebido como un texto de relleno, formateado de
@@ -50,8 +54,8 @@
           una cierta manera para permitir la presentación de elementos gráficos
           en documentos, sin necesidad de una copia formal.
         </p>
-      </div>
-      <div class="servicio-item" id="MantPred">
+      </article>
+      <article class="servicio-item" id="MantPred">
         <h2>Mantenimiento predictivo</h2>
         <p>
           El Lorem Ipsum fue concebido como un texto de relleno, formateado de
@@ -69,8 +73,8 @@
           una cierta manera para permitir la presentación de elementos gráficos
           en documentos, sin necesidad de una copia formal.
         </p>
-      </div>
-      <div class="servicio-item">
+      </article>
+      <article class="servicio-item">
         <h2>Proyectos eléctricos y mecánicos</h2>
         <p>
           El Lorem Ipsum fue concebido como un texto de relleno, formateado de
@@ -88,8 +92,8 @@
           una cierta manera para permitir la presentación de elementos gráficos
           en documentos, sin necesidad de una copia formal.
         </p>
-      </div>
-      <div class="servicio-item" id="RepMaqEq">
+      </article>
+      <article class="servicio-item" id="RepMaqEq">
         <h2>Reparación de máquinas y equipos</h2>
         <p>
           El Lorem Ipsum fue concebido como un texto de relleno, formateado de
@@ -107,8 +111,8 @@
           una cierta manera para permitir la presentación de elementos gráficos
           en documentos, sin necesidad de una copia formal.
         </p>
-      </div>
-      <div class="servicio-item">
+      </article>
+      <article class="servicio-item">
         <h2>Fabricación de partes y piezas</h2>
         <p>
           El Lorem Ipsum fue concebido como un texto de relleno, formateado de
@@ -126,8 +130,8 @@
           una cierta manera para permitir la presentación de elementos gráficos
           en documentos, sin necesidad de una copia formal.
         </p>
-      </div>
-      <div class="servicio-item">
+      </article>
+      <article class="servicio-item">
         <h2>TeknoSun se adapta a los nuevos tiempos</h2>
         <p>
           El Lorem Ipsum fue concebido como un texto de relleno, formateado de
@@ -145,9 +149,9 @@
           una cierta manera para permitir la presentación de elementos gráficos
           en documentos, sin necesidad de una copia formal.
         </p>
-      </div>
+      </article>
       <!-- fin servicios items -->
-    </div>
+    </section>
     <!-- fin servicio container -->
     <!-- inicio footer -->
     <footer>
