--- a/root/contacto.html
+++ b/root/contacto.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="icon" href="../logo icon.png" />
+    <title>TeknoSun</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -33,16 +34,15 @@
     <!-- inicio titulo -->
     <h1>Contactanos</h1>
     <!-- fin titulo -->
-    <!-- inicio formulario -->
     <section class="contacto">
       <h2>Comunicate con nosotros</h2>
       <div class="flex-container">
-        <form action="">
-          <input type="text" placeholder="Nombre" />
+        <form action="post">
+          <input type="text" placeholder="Nombre" value="Nombre" />
           <br />
-          <input type="text" placeholder="Email" />
+          <input type="email" placeholder="Email" value="Email" />
           <br />
-          <textarea type="text" placeholder="Mensaje"></textarea>
+          <textarea type="text" placeholder="Mensaje" value="Mensaje" /></textarea>
           <br />
           <input type="submit" value="Contactanos" />
         </form>
@@ -62,8 +62,7 @@
         </article>
       </div>
     </section>
-      <!-- fin contacto -->
-    </div>
+    <!-- fin contacto -->
     <!-- inicio footer -->
     <footer>
       <p>copyright</p>
