--- a/root/index.html
+++ b/root/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="../logo icon.png" />
     <title>TeknoSun</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -69,12 +70,12 @@
     <section class="contacto">
       <h2>Comunicate con nosotros</h2>
       <div class="flex-container">
-        <form action="">
-          <input type="text" placeholder="Nombre" />
+        <form action="post">
+          <input type="text" placeholder="Nombre" value="Nombre" />
           <br />
-          <input type="text" placeholder="Email" />
+          <input type="email" placeholder="Email" value="Email" />
           <br />
-          <textarea type="text" placeholder="Mensaje"></textarea>
+          <textarea type="text" placeholder="Mensaje" value="Mensaje"></textarea>
           <br />
           <input type="submit" value="Contactanos" />
         </form>
