--- a/root/nosotros.html
+++ b/root/nosotros.html
@@ -70,7 +70,7 @@
           sus requerimientos.
         </p>
         <p>
-          Proporcionar un servicio integral, de alta calidad adaptado a sus
+          ✓ Proporcionar un servicio integral, de alta calidad adaptado a sus
           necesidades y a costos competitivos.
         </p>
       </article>
