--- a/root/contacto.html
+++ b/root/contacto.html
@@ -34,6 +34,7 @@
     <!-- inicio titulo -->
     <h1>Contactanos</h1>
     <!-- fin titulo -->
+    <!-- inicio formulario -->
     <section class="contacto">
       <h2>Comunicate con nosotros</h2>
       <div class="flex-container">
@@ -62,7 +63,7 @@
         </article>
       </div>
     </section>
-    <!-- fin contacto -->
+    <!-- fin formulario -->
     <!-- inicio footer -->
     <footer>
       <p>copyright</p>
