--- a/root/galeria.html
+++ b/root/galeria.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="../logo icon.png" />
+    <link rel="icon" href="images/logo icon.png" />
     <title>TeknoSun</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,40 +16,56 @@
   </head>
   <body>
     <!-- inicio header -->
-    <header>
+    <header class="header">
       <!-- inicio nav -->
-      <nav>
-        <img src="../logo_transparent.png" alt="logo" />
-        <ul class="navbar-items">
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="servicios.html">Servicios</a></li>
-          <li><a href="galeria.html">Galeria</a></li>
-          <li><a href="nosotros.html">Nosotros</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
+      <nav class="nav">
+        <a class="nav__img-link" href="index.html">
+          <img
+            class="nav__img"
+            src="images/logo_transparentNewColors.png"
+            alt="logo"
+          />
+        </a>
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__item-link gradient" href="index.html">Inicio</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__item-link gradient" href="servicios.html">
+              Servicios
+            </a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__item-link gradient" href="galeria.html">Galeria</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__item-link gradient" href="nosotros.html">Nosotros</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__item-link gradient" href="contacto.html">Contacto</a>
+          </li>
         </ul>
       </nav>
       <!-- fin nav -->
     </header>
     <!-- fin header -->
-    <!-- inicio titulo -->
-    <h1>Trabajos</h1>
-    <!-- fin titulo -->
     <!-- inicio galeria container -->
-    <section class="galeria-container">
-      <img src="../Gallery1.JPG" alt="imagen 1" />
-      <img src="../Gallery2.JPG" alt="imagen 2" />
-      <img src="../Gallery3.JPG" alt="imagen 3" />
-      <img src="../Gallery4.JPG" alt="imagen 4" />
-      <img src="../Gallery5.JPG" alt="imagen 5" />
-      <img src="../Gallery6.JPG" alt="imagen 6" />
-      <img src="../Gallery7.JPG" alt="imagen 7" />
-      <img src="../Gallery8.JPG" alt="imagen 8" />
+    <section class="galeria container">
+      <h1 class="galeria__title gradient">Trabajos</h1>
+      <img class="galeria__img" src="images/Gallery1.JPG" alt="imagen 1" />
+      <img class="galeria__img" src="images/Gallery2.JPG" alt="imagen 2" />
+      <img class="galeria__img" src="images/Gallery3.JPG" alt="imagen 3" />
+      <img class="galeria__img" src="images/Gallery4.JPG" alt="imagen 4" />
+      <img class="galeria__img" src="images/Gallery5.JPG" alt="imagen 5" />
+      <img class="galeria__img" src="images/Gallery6.JPG" alt="imagen 6" />
+      <img class="galeria__img" src="images/Gallery7.JPG" alt="imagen 7" />
+      <img class="galeria__img" src="images/Gallery8.JPG" alt="imagen 8" />
     </section>
     <!-- fin galeria container -->
     <!-- inicio footer -->
-    <footer>
-      <p>copyright</p>
-      <p>Gabriel Ramírez</p>
+    <footer class="footer">
+      <p class="footer__text gradient">copyright</p>
+      <p class="footer__text footer__text--right gradient">Gabriel Ramírez</p>
     </footer>
     <!-- fin footer  -->
   </body>
