--- a/root/index.html
+++ b/root/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="../logo icon.png" />
+    <link rel="icon" href="images/logoIcon.png" />
     <title>TeknoSun</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,90 +16,119 @@
   </head>
   <body>
     <!-- inicio header -->
-    <header>
+    <header class="header">
       <!-- inicio nav -->
-      <nav>
-        <img src="../logo_transparent.png" alt="logo" />
-        <ul class="navbar-items">
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="servicios.html">Servicios</a></li>
-          <li><a href="galeria.html">Galeria</a></li>
-          <li><a href="nosotros.html">Nosotros</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
+      <nav class="nav">
+        <a class="nav__img-link" href="index.html">
+          <img
+            class="nav__img"
+            src="images/logo_transparentNewColors.png"
+            alt="logo"
+          />
+        </a>
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__item-link gradient" href="index.html">Inicio</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__item-link gradient" href="servicios.html">
+              Servicios
+            </a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__item-link gradient" href="galeria.html">Galeria</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__item-link gradient" href="nosotros.html">Nosotros</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__item-link gradient" href="contacto.html">Contacto</a>
+          </li>
         </ul>
       </nav>
       <!-- fin nav -->
     </header>
     <!-- fin header -->
-    <!-- inicio sección inicio -->
-    <section class="inicio">
-      <h1>TeknoSun SpA</h1>
-      <h2>PBS. Mantención y Servicios Industriales</h2>
-      <!-- <button>Contactanos</button> -->
-      <a class="button" href="contacto.html">Contactanos</a>
-    </section>
-    <!-- fin sección inicio -->
-    <!-- inicio sección nosotros  -->
-    <section class="nosotros">
-      <h2>Nuestro Objetivo</h2>
-      <p>
-        Convertirse en un aliado estratégico alineado con el cliente en la
-        dirección del negocio, con el afán de satisfacer con excelencia, las
-        necesidades del mercado en el campo de la Mantención Industrial y
-        mantención eléctrica más Fabricación de repuestos sea cualquiera de sus
-        requerimientos. Proporcionar un servicio integral, de alta calidad
-        adaptado a sus necesidades y a costos competitivos.
-      </p>
-      <a class="button" href="nosotros.html">Conocenos mas</a>
-    </section>
-    <!-- fin sección nosotros  -->
-    <!-- inicio sección servicios -->
-    <section class="servicios">
-      <article>
-        <h2>Principales Servicios</h2>
-        <a href="servicios.html#MantPred"><h3>Mantenimiento predictivo</h3></a>
-        <a href="servicios.html#MantMaq"><h3>Mantención de maquinaria</h3></a>
-        <a href="servicios.html#RepMaqEq">
-          <h3>Reparación de máquinas y equipos</h3>
-        </a>
-        <a class="button" href="servicios.html">Todos los servicios</a>
-      </article>
-    </section>
-    <!-- fin sección servicios -->
-    <!-- inicio sección contacto -->
-    <section class="contacto">
-      <h2>Comunicate con nosotros</h2>
-      <div class="flex-container">
-        <form action="post">
-          <input type="text" placeholder="Nombre" value="Nombre" />
-          <br />
-          <input type="email" placeholder="Email" value="Email" />
-          <br />
-          <textarea type="text" placeholder="Mensaje" value="Mensaje"></textarea>
-          <br />
-          <input type="submit" value="Contactanos" />
-        </form>
-        <article>
-          <h3>Nuestras redes:</h3>
-          <p>Siguenos en nuestras redes para ver a detalle nuestro trabajo</p>
-          <br />
-          <a href="#"><img src="../instagram.png" alt="instagram icon" /></a>
-          <a href="#"><img src="../facebook.png" alt="instagram icon" /></a>
-          <br />
-          <br />
-          <h3>Datos para contactar:</h3>
-          <p>Independencia, Santiago</p>
-          <p>comercial@teknosun.cl</p>
-          <p>+56994340066</p>
-          <img src="../Map.png" alt="mapa" />
+    <main>
+      <!-- inicio sección inicio -->
+      <section class="inicio container">
+        <img class="inicio__img" src="images/logo_transparentNewColors.png" alt="logoHero">
+        <h1 class="inicio__title gradient">Mantención y Servicios Industriales</h1>
+        <a class="button" href="contacto.html">Contactanos</a>
+      </section>
+      <!-- fin sección inicio -->
+      <!-- inicio sección nosotros y servicios -->
+      <section class="info">
+      <!-- inicio sección nosotros  -->
+      <div class="nosotros container">
+        <h2 class="nosotros__subtitle gradient">Nuestro Objetivo</h2>
+        <p class="nosotros__text">
+          Convertirse en un aliado estratégico alineado con el cliente en la
+          dirección del negocio, con el afán de satisfacer con excelencia, las
+          necesidades del mercado en el campo de la Mantención Industrial y
+          mantención eléctrica más Fabricación de repuestos sea cualquiera de sus
+          requerimientos. Proporcionar un servicio integral, de alta calidad
+          adaptado a sus necesidades y a costos competitivos.
+        </p>
+        <a class="button" href="contacto.html">Conocenos mas</a>
+      </div>
+      <!-- fin sección nosotros  -->
+      <!-- inicio sección servicios -->
+      <div class="servicios container">
+        <article class="servicios__article">
+          <h2 class="servicios__subtitle gradient">Principales Servicios</h2>
+            <p class="servicios__item-text">Mantenimiento predictivo</p>
+            <p class="servicios__item-text">Mantención de maquinaria</p>
+            <p class="servicios__item-text">Reparación de máquinas y equipos</p>
+          <p class="servicios__text">Para conocer más acerca de nuestros diferentes servicios sigue el siguiente enlace</p>
+          <a class="button" href="servicios.html">Todos los servicios</a>
         </article>
       </div>
+      <!-- fin sección servicios -->
     </section>
-    <!-- fin sección contacto -->
+      <!-- fin sección nosotros y servicios -->
+      <!-- inicio sección contacto -->
+      <section class="contacto container">
+        <h2 class="contacto__subtitle gradient">Comunicate con nosotros</h2>
+        <div class="contacto__container">
+          <form class="contacto__form" action="post">
+            <input class="contacto__input" type="text" placeholder="Nombre" name="Nombre" />
+            <br />
+            <input class="contacto__input" type="email" placeholder="Email" name="Email"/>
+            <br />
+            <textarea class="contacto__textarea" type="text" placeholder="Mensaje" value="Mensaje" name="Mensaje"/></textarea>
+            <br />
+            <input class="contacto__button" type="submit" value="Contactanos" />
+          </form>
+          <article class="contacto__article">
+            <h3 class="contacto__h3 gradient">Nuestras redes:</h3>
+            <p class="contacto__text" >Siguenos en nuestras redes para ver a detalle nuestro trabajo</p>
+            <br />
+            <a class="contacto__link" href="https://www.instagram.com/teknosun_spa/"><img class="contacto__icon" src="images/instagram.png" alt="instagram icon" /></a>
+            <a class="contacto__link" href="https://www.facebook.com/teknosun.teknosun"><img class="contacto__icon" src="images/facebook.png" alt="instagram icon" /></a>
+            <br />
+            <br />
+            <h3 class="contacto__h3 gradient">Datos para contactar:</h3>
+            <p class="contacto__text" >Independencia, Santiago</p>
+            <p class="contacto__text" >comercial@teknosun.cl</p>
+            <p class="contacto__text" >+56994340066</p>
+            <div class="contacto__map-container">
+              <div class="contacto__gmap">
+                <iframe class="contacto__map" id="gmap_canvas" src="https://maps.google.com/maps?q=santiago&t=&z=9&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+                </iframe>
+                <a class="contacto__map-link" href="https://123movies-a.com"></a>
+                <br>
+                <a class="contacto__map-link" href="https://www.embedgooglemap.net"></a></div>
+            </div>
+          </article>
+        </div>
+      </section>
+      <!-- fin sección contacto -->
+    </main>
     <!-- inicio footer -->
-    <footer>
-      <p>copyright</p>
-      <p>Gabriel Ramírez</p>
+    <footer class="footer">
+      <p class="footer__text gradient" >copyright</p>
+      <p class="footer__text footer__text--right gradient">Gabriel Ramírez</p>
     </footer>
     <!-- fin footer  -->
   </body>
