--- a/root/nosotros.html
+++ b/root/nosotros.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="../logo icon.png" />
+    <link rel="icon" href="images/logo icon.png" />
     <title>TeknoSun</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,40 +16,68 @@
   </head>
   <body>
     <!-- inicio header -->
-    <header>
+    <header class="header">
       <!-- inicio nav -->
-      <nav>
-        <img src="../logo_transparent.png" alt="logo" />
-        <ul class="navbar-items">
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="servicios.html">Servicios</a></li>
-          <li><a href="galeria.html">Galeria</a></li>
-          <li><a href="nosotros.html">Nosotros</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
+      <nav class="nav">
+        <a class="nav__img-link" href="index.html">
+          <img
+            class="nav__img"
+            src="images/logo_transparentNewColors.png"
+            alt="logo"
+          />
+        </a>
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__item-link gradient" href="index.html">Inicio</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__item-link gradient" href="servicios.html">
+              Servicios
+            </a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__item-link gradient" href="galeria.html">Galeria</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__item-link gradient" href="nosotros.html">Nosotros</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__item-link gradient" href="contacto.html">Contacto</a>
+          </li>
         </ul>
       </nav>
       <!-- fin nav -->
     </header>
     <!-- fin header -->
-    <!-- inicio titulo -->
-    <h1>Quienes Somos</h1>
-    <!-- fin titulo -->
     <!-- inicio nosotros container -->
-    <section class="nosotros-container">
-      <article class="nosotros-item">
-        <h2>Nuestra Filosofía</h2>
-        <p>
+    <section class="nosotros container">
+      <h1 class="nosotros__title gradient">Quienes Somos</h1>
+      <article class="nosotros__item">
+        <h2 class="nosotros__subtitle gradient">Nuestra Filosofía</h2>
+        <p class="nosotros__text">
           El servicio ofrecido se sustenta en el desarrollo de las actividades
           donde se privilegia el concepto de trabajo CASS :
         </p>
-        <p>✓ Trabajo de Calidad</p>
-        <p>✓ Cuidado del Medio Ambiente</p>
-        <p>✓ Que se realice en forma Segura</p>
-        <p>✓ Preocupación por la Salud ocupacional del equipo humano</p>
+        <p class="nosotros__text">
+          <span class="nosotros__check gradient">✓</span>
+          Trabajo de Calidad
+        </p>
+        <p class="nosotros__text">
+          <span class="nosotros__check gradient">✓</span>
+          Cuidado del Medio Ambiente
+        </p>
+        <p class="nosotros__text">
+          <span class="nosotros__check gradient">✓</span>
+          Que se realice en forma Segura
+        </p>
+        <p class="nosotros__text">
+          <span class="nosotros__check gradient">✓</span>
+          Preocupación por la Salud ocupacional del equipo humano
+        </p>
       </article>
-      <article class="nosotros-item">
-        <h2>Nuestra Misión</h2>
-        <p>
+      <article class="nosotros__item">
+        <h2 class="nosotros__subtitle gradient">Nuestra Misión</h2>
+        <p class="nosotros__text">
           Entregar un servicio de excelencia basado en la calidad de sus
           profesionales ; técnicos eléctricos y técnicos mecánicos. En la cual
           PBS. Mantención y Servicios Industriales, tiene implementado un
@@ -57,28 +85,32 @@
           un mejoramiento continuo de sus habilidades, lo que garantiza la
           competitividad en el mercado.
         </p>
-        <p>✓ Preocupación por la Salud ocupacional del equipo humano</p>
+        <p class="nosotros__text">
+          <span class="nosotros__check gradient">✓</span>
+          Preocupación por la Salud ocupacional del equipo humano
+        </p>
       </article>
-      <article class="nosotros-item">
-        <h2>Nuestro Objetivo</h2>
-        <p>
+      <article class="nosotros__item">
+        <h2 class="nosotros__subtitle gradient">Nuestro Objetivo</h2>
+        <p class="nosotros__text">
           Convertirse en un aliado estratégico alineado con el cliente en la
           dirección del negocio, con el afán de satisfacer con excelencia, las
           necesidades del mercado en el campo de la Mantención Industrial y
           mantención eléctrica más Fabricación de repuestos sea cualquiera de
           sus requerimientos.
         </p>
-        <p>
-          ✓ Proporcionar un servicio integral, de alta calidad adaptado a sus
+        <p class="nosotros__text">
+          <span class="nosotros__check gradient">✓</span>
+          Proporcionar un servicio integral, de alta calidad adaptado a sus
           necesidades y a costos competitivos.
         </p>
       </article>
     </section>
     <!-- fin nosotros container -->
     <!-- inicio footer -->
-    <footer>
-      <p>copyright</p>
-      <p>Gabriel Ramírez</p>
+    <footer class="footer">
+      <p class="footer__text gradient">copyright</p>
+      <p class="footer__text footer__text--right gradient">Gabriel Ramírez</p>
     </footer>
     <!-- fin footer  -->
   </body>
